<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.tencent.ilivesdk.view.AVRootView
        android:id="@+id/av_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/quality_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true" />
    <TextView
        android:id="@+id/quality_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/quality_circle"
        android:layout_alignRight="@id/quality_circle"
        android:textColor="#FFFFFF"
        android:text="111"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/qav_tips_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="80dp"
            android:maxLength="2000"
            android:singleLine="false"
            android:textSize="13sp" />

    </ScrollView>


    <FrameLayout
        android:id="@+id/controll_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/head_up_layout"
            layout="@layout/head_up_layout"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="10dp"
            android:text="1231231" />


        <LinearLayout
            android:layout_marginTop="60dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/live_btn"
                android:id="@+id/param_video"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_btn_par" />


            <TextView
                style="@style/live_btn"
                android:id="@+id/push_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:text="@string/live_btn_push"
                />

            <TextView
                style="@style/live_btn"
                android:id="@+id/speed_test_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/ping_speed_test"
                />


            <TextView
                style="@style/live_btn"
                android:id="@+id/record_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:text="@string/live_btn_record"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/video_interact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/icon_video_interact" />

        <TextView
            android:id="@+id/btn_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top|right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back_live_btn"
            android:onClick="onClick" />

        <ListView
            android:id="@+id/im_msg_listview"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="left|bottom"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="50dp"
            android:cacheColorHint="#00000000"
            android:divider="#3c421b1b"
            android:scrollbarStyle="outsideOverlay"
            android:stackFromBottom="true"
            android:transcriptMode="normal" />


        <include
            layout="@layout/member_bottom_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp" />


        <include
            layout="@layout/video_member_bottom_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp" />

        <include
            layout="@layout/host_bottom_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <com.tencent.qcloud.suixinbo.views.customviews.HeartLayout
                android:id="@+id/heart_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-10dp"
                android:focusable="true" />
        </RelativeLayout>

    </FrameLayout>


    <include
        android:id="@+id/qav_beauty_setting"
        layout="@layout/qav_beauty_setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp" />


    <include
        android:id="@+id/invite_views"
        layout="@layout/invite_views"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" />


    <TextView
        android:id="@+id/normal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/icon_nomal"
        android:onClick="onClick"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_host_leave"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ImageView
            android:src="@drawable/host_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/live_host_leave"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorGray3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>